--- a/Lesson_13/assets/main.css
+++ b/Lesson_13/assets/main.css
@@ -259,6 +259,7 @@ header {
   justify-content: space-between;
   margin-top: 115px;
   margin-bottom: 50px;
+  align-items: center;
 }
 
 .footer_logo {
@@ -294,6 +295,10 @@ header {
 .footer_link .icons_link {
   display: flex;
   gap: 24px;
+}
+.footer_link .icons_link li {
+  display: inline-block;
+  height: 15px;
 }
 .footer_link .icons_link img {
   width: 15px;
