search bar project one

--- a/Project_1/assets/main.scss
+++ b/Project_1/assets/main.scss
@@ -1,1 +1,5 @@
+@import './styles/vars';
 @import './styles/base';
+@import './styles/nav';
+@import './styles/section';
+@import './styles/components';
