--- a/Project_1/assets/main.css
+++ b/Project_1/assets/main.css
@@ -1,3 +1,110 @@
-body {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
   font-family: "Josefin Sans", sans-serif;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+header {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.intro {
+  background-image: url("./images/image1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  max-width: 1770px;
+}
+
+.intro_texts {
+  margin: 0 auto;
+  padding-top: 264px;
+  padding-bottom: 108px;
+}
+
+.title_text {
+  letter-spacing: 11px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 26px;
+  letter-spacing: 4.8px;
+  text-align: center;
+  margin-bottom: 11px;
+}
+
+.title_text_info {
+  line-height: 26px;
+  letter-spacing: 6.82px;
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 11px;
+}
+
+.search_button {
+  position: relative;
+}
+.search_button img {
+  position: absolute;
+  top: 30%;
+  left: 83%;
+  width: 22px;
+  height: 24px;
+  transform: translate(-50%);
+}
+
+.search_bar {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 108px;
+}
+.search_bar form {
+  display: flex;
+}
+.search_bar input {
+  display: flex;
+  justify-content: center;
+  min-width: 503px;
+  height: 63px;
+  width: 100%;
+  border: none;
+  letter-spacing: 2.8px;
+  line-height: 26px;
+  font-size: 14px;
+  color: #999999;
+  text-transform: capitalize;
+  padding: 19px 108px;
+  font-family: inherit;
+}
+
+.btn {
+  background-color: #5474fd;
+  min-width: 153px;
+  text-transform: uppercase;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  font-family: "Aleo", serif;
+  padding: 16px 38px 16px 23px;
+  letter-spacing: 1.4px;
+  line-height: 26px;
+  font-size: 14px;
+  cursor: pointer;
 }
