--- a/Project_1/assets/styles/_base.css
+++ b/Project_1/assets/styles/_base.css
@@ -1,3 +1,21 @@
-body {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
   font-family: "Josefin Sans", sans-serif;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
