--- a/Project_1/assets/styles/_base.scss
+++ b/Project_1/assets/styles/_base.scss
@@ -1,4 +1,24 @@
-body {
+@import '../styles/vars';
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body,
+html {
     font-family: "Josefin Sans",
         sans-serif;
+    color: $primary_color;
+    width: 100%;
+    height: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
 }
