--- a/Project_1/assets/styles/_section.css
+++ b/Project_1/assets/styles/_section.css
@@ -7,15 +7,16 @@ header {
   background-image: url("./images/image1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   width: 100%;
-  max-width: 1770px;
 }
 
 .intro_texts {
   margin: 0 auto;
   padding-top: 264px;
   padding-bottom: 108px;
+  top: 70px;
+  position: relative;
+  left: 65px;
 }
 
 .title_text {
@@ -34,7 +35,7 @@ header {
   letter-spacing: 6.82px;
   font-size: 22px;
   text-align: center;
-  margin-bottom: 11px;
+  margin-bottom: 48px;
 }
 
 .search_button {
@@ -47,4 +48,90 @@ header {
   width: 22px;
   height: 24px;
   transform: translate(-50%);
+}
+
+.scroll {
+  text-align: center;
+  margin-bottom: 134px;
+}
+.scroll h3 {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: 2.8px;
+}
+.scroll i {
+  width: 17px;
+  height: 11px;
+}
+
+.header_navigation {
+  background-color: #5474fd;
+  width: 100%;
+  min-height: 80px;
+  display: flex;
+}
+.header_navigation .header_navigation_container {
+  max-width: 1175px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header_navigation .header_navigation_container .logo {
+  max-width: 186px;
+  width: 100%;
+  height: 20px;
+}
+
+.nav_list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 12px;
+}
+.nav_list li {
+  display: inline-flex;
+  vertical-align: middle;
+  font-family: "Aleo", serif;
+  line-height: 26px;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.why_choose_us_container {
+  background-image: url("./images/background_image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 685px;
+  width: 100%;
+}
+
+.why_choose_us {
+  width: 100%;
+  max-width: 1175px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.why_choose_us .why_choose_us_left {
+  width: 51%;
+  margin-top: 212px;
+}
+.why_choose_us .why_choose_us_left h2 {
+  font-size: 36px;
+  line-height: 26px;
+  font-family: "Aleo", serif;
+  margin-bottom: 50px;
+  font-weight: 400;
+}
+.why_choose_us .why_choose_us_left p {
+  font-size: 16px;
+  letter-spacing: 1.6px;
+  line-height: 26px;
+  color: #e8e8e8;
+  margin-bottom: 30px;
+}
+.why_choose_us .why_choose_us_left p:last-of-type {
+  margin-bottom: 45px;
 }
