--- a/Project_1/assets/styles/_section.scss
+++ b/Project_1/assets/styles/_section.scss
@@ -21,7 +21,7 @@ header {
     padding-bottom: 108px;
     top: 70px;
     position: relative;
-    left: 65px
+    // left: 65px
 }
 
 .title_text {
