--- a/Project_1/assets/main.css
+++ b/Project_1/assets/main.css
@@ -31,6 +31,8 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 .intro_texts {
@@ -158,6 +160,88 @@ header {
   margin-bottom: 45px;
 }
 
+.why_choose_us_right .wcu_img_up {
+  margin-top: 118px;
+  padding-right: 90px;
+  margin-bottom: 10px;
+}
+.why_choose_us_right .wcu_img_down {
+  padding-left: 90px;
+}
+
+.search_select_books {
+  background-color: #333333;
+}
+.search_select_books .container {
+  max-width: 1175px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.elements {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 100px;
+  gap: 30px;
+  padding-bottom: 116px;
+  position: relative;
+}
+.elements .elements_icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.elements .elements_icons .elements_icons_image {
+  padding-bottom: 30px;
+}
+.elements .elements_icons h3 {
+  font-family: "Aleo", serif;
+  line-height: 26px;
+  font-size: 36px;
+  color: #e8e8e8;
+  font-weight: 400;
+}
+
+.bg_lines::before {
+  content: "";
+  width: 405px;
+  height: 190px;
+  border-radius: 50%;
+  position: absolute;
+  top: 40px;
+  bottom: 40px;
+  border: 2px solid transparent;
+  border-top: 2px solid #ffffff;
+  left: 50%;
+  opacity: 50%;
+}
+.bg_lines::after {
+  content: "";
+  width: 405px;
+  height: 190px;
+  border-radius: 50%;
+  position: absolute;
+  top: 40px;
+  bottom: 40px;
+  border: 2px solid transparent;
+  border-top: 2px solid #ffffff;
+  left: 15%;
+  opacity: 50%;
+}
+
+@media screen and (max-width: 1100px) {
+  .bg_lines::before,
+.bg_lines::after {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .bg_lines::before,
+.bg_lines::after {
+    width: 250px;
+  }
+}
 .search_bar {
   display: flex;
   justify-content: center;
@@ -194,4 +278,14 @@ header {
   line-height: 26px;
   font-size: 14px;
   cursor: pointer;
+}
+
+.btn_places {
+  max-width: 228px;
+  width: 100%;
+  letter-spacing: 1.2px;
+  line-height: 26px;
+  font-size: 16px;
+  padding: 16px 35px;
+  border: none;
 }
