--- a/Project_1/assets/styles/_components.scss
+++ b/Project_1/assets/styles/_components.scss
@@ -40,3 +40,13 @@
     font-size: 14px;
     cursor: pointer;
 }
+
+.btn_places {
+    max-width: 228px;
+    width: 100%;
+    letter-spacing: 1.2px;
+    line-height: 26px;
+    font-size: 16px;
+    padding: 16px 35px;
+    border: none;
+}
