--- a/Project_1/assets/styles/_section.scss
+++ b/Project_1/assets/styles/_section.scss
@@ -9,19 +9,17 @@ header {
     background-image: url('./images/image1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    // height: 100vh;
     width: 100%;
+    margin: 0 auto;
+    height: 100vh;
 }
 
 .intro_texts {
-    // max-width: 1200px;
-    // width: 100%;
     margin: 0 auto;
     padding-top: 264px;
     padding-bottom: 108px;
     top: 70px;
     position: relative;
-    // left: 65px
 }
 
 .title_text {
@@ -148,5 +146,102 @@ header {
                 margin-bottom: 45px;
             }
         }
+    }
+}
+
+.why_choose_us_right {
+    .wcu_img_up {
+        margin-top: 118px;
+        padding-right: 90px;
+        margin-bottom: 10px;
+    }
+
+    .wcu_img_down {
+        padding-left: 90px;
+    }
+}
+
+.search_select_books {
+    background-color: $secondary_bg_color;
+
+    .container {
+        max-width: 1175px;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
+.elements {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 100px;
+    gap: 30px;
+    padding-bottom: 116px;
+    position: relative;
+
+    .elements_icons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+        .elements_icons_image {
+            padding-bottom: 30px;
+        }
+
+        h3 {
+            font-family: "Aleo", serif;
+            line-height: 26px;
+            font-size: 36px;
+            color: $text_color;
+            font-weight: 400;
+        }
+    }
+}
+
+.bg_lines {
+    &::before {
+        content: "";
+        width: 405px;
+        height: 190px;
+        border-radius: 50%;
+        position: absolute;
+        top: 40px;
+        bottom: 40px;
+        border: 2px solid transparent;
+        border-top: 2px solid #ffffff;
+        left: 50%;
+        opacity: 50%;
+    }
+
+    &::after {
+        content: "";
+        width: 405px;
+        height: 190px;
+        border-radius: 50%;
+        position: absolute;
+        top: 40px;
+        bottom: 40px;
+        border: 2px solid transparent;
+        border-top: 2px solid #ffffff;
+        left: 15%;
+        opacity: 50%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+
+    .bg_lines::before,
+    .bg_lines::after {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width:768px) {
+
+    .bg_lines::before,
+    .bg_lines::after {
+        width: 250px;
     }
 }
