project_1 without media queries

--- a/Project_1/assets/main.scss
+++ b/Project_1/assets/main.scss
@@ -1,5 +1,7 @@
 @import './styles/vars';
 @import './styles/base';
+@import './styles/header';
 @import './styles/nav';
 @import './styles/section';
 @import './styles/components';
+@import './styles/footer';
