--- a/Project_1/assets/main.css
+++ b/Project_1/assets/main.css
@@ -21,41 +21,6 @@ ul {
   list-style: none;
 }
 
-.header_navigation {
-  background-color: #5474fd;
-  width: 100%;
-  min-height: 80px;
-  display: flex;
-}
-.header_navigation .header_navigation_container {
-  max-width: 1175px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header_navigation .header_navigation_container .logo {
-  max-width: 186px;
-  width: 100%;
-  height: 20px;
-}
-
-.nav_list {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 12px;
-}
-.nav_list li {
-  display: inline-flex;
-  vertical-align: middle;
-  font-family: "Aleo", serif;
-  line-height: 26px;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
 header {
   width: 100%;
   margin: 0 auto;
@@ -121,6 +86,41 @@ header {
 .scroll i {
   width: 17px;
   height: 11px;
+}
+
+.header_navigation {
+  background-color: #5474fd;
+  width: 100%;
+  min-height: 80px;
+  display: flex;
+}
+.header_navigation .header_navigation_container {
+  max-width: 1175px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header_navigation .header_navigation_container .logo {
+  max-width: 186px;
+  width: 100%;
+  height: 20px;
+}
+
+.nav_list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 12px;
+}
+.nav_list li {
+  display: inline-flex;
+  vertical-align: middle;
+  font-family: "Aleo", serif;
+  line-height: 26px;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 
 .why_choose_us_container {
@@ -325,6 +325,67 @@ header {
   margin-top: 227px;
 }
 
+.tourist {
+  background-image: url("./images/section4_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  margin: 0 auto;
+}
+.tourist .tourist_container {
+  max-width: 1175px;
+  width: 100%;
+  margin: 0 auto;
+}
+.tourist .tourist_container h2 {
+  padding-top: 128px;
+  margin-bottom: 91px;
+  text-align: center;
+  font-family: "Aleo", serif;
+  font-weight: 400;
+  line-height: 26px;
+  font-size: 36px;
+  text-transform: capitalize;
+}
+
+.tourist_comments {
+  display: flex;
+  padding-bottom: 200px;
+}
+.tourist_comments .tourist_image {
+  flex-basis: 45%;
+}
+.tourist_comments .tourist_image img {
+  object-fit: cover;
+  max-width: 445px;
+  width: 100%;
+  height: 100%;
+}
+.tourist_comments .tourist_quote {
+  background-color: #333333;
+  flex-basis: 75%;
+  padding: 49px 25px 39px 62px;
+}
+.tourist_comments .tourist_quote h4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 400;
+  margin-bottom: 8px;
+  text-transform: uppercase;
+}
+.tourist_comments .tourist_quote p {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.tourist_comments .tourist_quote i {
+  color: #5474fd;
+  font-size: 35px;
+  padding-right: 10px;
+}
+
 .search_bar {
   display: flex;
   justify-content: center;
@@ -371,4 +432,47 @@ header {
   font-size: 16px;
   padding: 16px 35px;
   border: none;
+}
+
+footer {
+  background-color: #333333;
+  padding: 120px 0 50px;
+}
+
+.footer_container {
+  max-width: 1175px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.footer_contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer_contents .footer_logo {
+  margin-bottom: 8px;
+}
+.footer_contents .footer_logo img {
+  width: 100%;
+  height: 100%;
+}
+.footer_contents h3 {
+  font-family: "Josefin Sans", sans-serif;
+  line-height: 26px;
+  letter-spacing: 1.6px;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.social_links {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  margin-top: 30px;
+}
+
+.linkedin {
+  color: #5474fd;
 }
