--- a/Project_1/assets/styles/_section.css
+++ b/Project_1/assets/styles/_section.css
@@ -1,70 +1,3 @@
-header {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.intro {
-  background-image: url("./images/image1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  margin: 0 auto;
-  height: 100vh;
-}
-
-.intro_texts {
-  margin: 0 auto;
-  padding-top: 264px;
-  padding-bottom: 108px;
-  top: 70px;
-  position: relative;
-}
-
-.title_text {
-  letter-spacing: 11px;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 26px;
-  letter-spacing: 4.8px;
-  text-align: center;
-  margin-bottom: 11px;
-}
-
-.title_text_info {
-  line-height: 26px;
-  letter-spacing: 6.82px;
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 48px;
-}
-
-.search_button {
-  position: relative;
-}
-.search_button img {
-  position: absolute;
-  top: 30%;
-  left: 83%;
-  width: 22px;
-  height: 24px;
-  transform: translate(-50%);
-}
-
-.scroll {
-  text-align: center;
-  margin-bottom: 134px;
-}
-.scroll h3 {
-  font-size: 14px;
-  line-height: 26px;
-  letter-spacing: 2.8px;
-}
-.scroll i {
-  width: 17px;
-  height: 11px;
-}
-
 .why_choose_us_container {
   background-image: url("./images/background_image.jpg");
   background-repeat: no-repeat;
@@ -265,4 +198,65 @@ header {
 }
 .spain_box_two .card {
   margin-top: 227px;
+}
+
+.tourist {
+  background-image: url("./images/section4_bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  margin: 0 auto;
+}
+.tourist .tourist_container {
+  max-width: 1175px;
+  width: 100%;
+  margin: 0 auto;
+}
+.tourist .tourist_container h2 {
+  padding-top: 128px;
+  margin-bottom: 91px;
+  text-align: center;
+  font-family: "Aleo", serif;
+  font-weight: 400;
+  line-height: 26px;
+  font-size: 36px;
+  text-transform: capitalize;
+}
+
+.tourist_comments {
+  display: flex;
+  padding-bottom: 200px;
+}
+.tourist_comments .tourist_image {
+  flex-basis: 45%;
+}
+.tourist_comments .tourist_image img {
+  object-fit: cover;
+  max-width: 445px;
+  width: 100%;
+  height: 100%;
+}
+.tourist_comments .tourist_quote {
+  background-color: #333333;
+  flex-basis: 75%;
+  padding: 49px 25px 39px 62px;
+}
+.tourist_comments .tourist_quote h4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 400;
+  margin-bottom: 8px;
+  text-transform: uppercase;
+}
+.tourist_comments .tourist_quote p {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.tourist_comments .tourist_quote i {
+  color: #5474fd;
+  font-size: 35px;
+  padding-right: 10px;
 }
