--- a/Project_1/assets/styles/_section.scss
+++ b/Project_1/assets/styles/_section.scss
@@ -1,74 +1,5 @@
 @import '../styles/vars';
 
-header {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.intro {
-    background-image: url('./images/image1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    margin: 0 auto;
-    height: 100vh;
-}
-
-.intro_texts {
-    margin: 0 auto;
-    padding-top: 264px;
-    padding-bottom: 108px;
-    top: 70px;
-    position: relative;
-}
-
-.title_text {
-    letter-spacing: 11px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 26px;
-    letter-spacing: 4.8px;
-    text-align: center;
-    margin-bottom: 11px;
-}
-
-.title_text_info {
-    line-height: 26px;
-    letter-spacing: 6.82px;
-    font-size: 22px;
-    text-align: center;
-    margin-bottom: 48px;
-}
-
-.search_button {
-    position: relative;
-
-    img {
-        position: absolute;
-        top: 30%;
-        left: 83%;
-        width: 22px;
-        height: 24px;
-        transform: translate(-50%);
-    }
-}
-
-.scroll {
-    text-align: center;
-    margin-bottom: 134px;
-
-    h3 {
-        font-size: 14px;
-        line-height: 26px;
-        letter-spacing: 2.8px;
-    }
-
-    i {
-        width: 17px;
-        height: 11px;
-    }
-}
 
 .why_choose_us_container {
     background-image: url('./images/background_image.jpg');
@@ -298,5 +229,74 @@ header {
 
     .card {
         margin-top: 227px;
+    }
+}
+
+.tourist {
+    background-image: url('./images/section4_bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    margin: 0 auto;
+
+    .tourist_container {
+        max-width: 1175px;
+        width: 100%;
+        margin: 0 auto;
+
+        h2 {
+            padding-top: 128px;
+            margin-bottom: 91px;
+            text-align: center;
+            font-family: "Aleo", serif;
+            font-weight: 400;
+            line-height: 26px;
+            font-size: 36px;
+            text-transform: capitalize;
+        }
+    }
+}
+
+.tourist_comments {
+    display: flex;
+    padding-bottom: 200px;
+
+    .tourist_image {
+        flex-basis: 45%;
+
+        img {
+            object-fit: cover;
+            max-width: 445px;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .tourist_quote {
+        background-color: $secondary_bg_color;
+        flex-basis: 75%;
+        padding: 49px 25px 39px 62px;
+
+        h4 {
+            font-family: "Josefin Sans", sans-serif;
+            font-size: 20px;
+            line-height: 26px;
+            font-weight: 400;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+        }
+
+        p {
+            font-family: "Josefin Sans", sans-serif;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 26px;
+        }
+
+        i {
+            color: $base_color;
+            font-size: 35px;
+            padding-right: 10px;
+        }
     }
 }
