--- a/Project_1/assets/styles/_footer.scss
+++ b/Project_1/assets/styles/_footer.scss
@@ -43,6 +43,14 @@ footer {
     margin-top: 30px;
 }
 
+.grow {
+    transition: all .2s ease-in-out;
+
+    &:hover {
+        transform: scale(1.5);
+    }
+}
+
 .linkedin {
     color: $base_color;
 }
