--- a/Project_1/assets/styles/_vars.scss
+++ b/Project_1/assets/styles/_vars.scss
@@ -3,3 +3,5 @@ $base_color:#5474fd;
 $input_text_color:#999999;
 $text_color:#e8e8e8;
 $secondary_bg_color:#333333;
+$list_hover:#E0E0E0;
+$btn_hover:#3f5bbf;
