--- a/Project_1/assets/styles/_components.css
+++ b/Project_1/assets/styles/_components.css
@@ -17,9 +17,9 @@
   line-height: 26px;
   font-size: 14px;
   color: #999999;
-  text-transform: capitalize;
   padding: 19px 108px;
   font-family: inherit;
+  outline: none;
 }
 
 .btn {
@@ -44,4 +44,9 @@
   font-size: 16px;
   padding: 16px 35px;
   border: none;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+.btn_places:hover {
+  background-color: #3f5bbf;
+  transform: scale(1.05);
 }
