--- a/Project_1/assets/styles/_header.css
+++ b/Project_1/assets/styles/_header.css
@@ -18,6 +18,7 @@ header {
   padding-bottom: 108px;
   top: 70px;
   position: relative;
+  cursor: pointer;
 }
 
 .title_text {
@@ -37,6 +38,20 @@ header {
   font-size: 22px;
   text-align: center;
   margin-bottom: 48px;
+}
+
+.search_bar {
+  transition: transform 0.3s ease;
+}
+.search_bar:hover {
+  transform: translateY(2px);
+}
+.search_bar i {
+  position: absolute;
+  top: 37%;
+  left: 82%;
+  transform: translate(-50%);
+  font-size: 16px;
 }
 
 .search_button {
@@ -59,8 +74,17 @@ header {
   font-size: 14px;
   line-height: 26px;
   letter-spacing: 2.8px;
+  transition: all 0.2s ease-in-out;
+}
+.scroll h3:hover {
+  transform: scale(1.3);
+  text-transform: uppercase;
 }
 .scroll i {
   width: 17px;
   height: 11px;
+  transition: transform 0.3s ease;
+}
+.scroll i:hover {
+  transform: translateY(5px);
 }
