--- a/Project_1/assets/styles/_header.scss
+++ b/Project_1/assets/styles/_header.scss
@@ -20,6 +20,7 @@ header {
     padding-bottom: 108px;
     top: 70px;
     position: relative;
+    cursor: pointer;
 }
 
 .title_text {
@@ -39,6 +40,22 @@ header {
     font-size: 22px;
     text-align: center;
     margin-bottom: 48px;
+}
+
+.search_bar {
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: translateY(2px);
+    }
+
+    i {
+        position: absolute;
+        top: 37%;
+        left: 82%;
+        transform: translate(-50%);
+        font-size: 16px;
+    }
 }
 
 .search_button {
@@ -62,10 +79,21 @@ header {
         font-size: 14px;
         line-height: 26px;
         letter-spacing: 2.8px;
+        transition: all .2s ease-in-out;
+
+        &:hover {
+            transform: scale(1.3);
+            text-transform: uppercase;
+        }
     }
 
     i {
         width: 17px;
         height: 11px;
+        transition: transform 0.3s ease;
+
+        &:hover {
+            transform: translateY(5px);
+        }
     }
 }
