--- a/Project_1/assets/styles/_nav.scss
+++ b/Project_1/assets/styles/_nav.scss
@@ -36,4 +36,10 @@
         font-size: 14px;
         text-transform: uppercase;
     }
+
+    a:hover {
+        text-decoration: underline;
+        color: $list_hover;
+        text-underline-offset: 10px;
+    }
 }
